--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   },
   "homepage": "https://github.com/science-math-guy/NeuroCrypt#readme",
   "devDependencies": {
-    "@types/node": "^14.14.37",
+    "@types/express": "^4.17.12",
+    "@types/node": "^14.17.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "ejs": "^3.1.6",
+    "express": "^4.17.1"
   }
 }
